# pome

./: .clangd  .gitignore  .ninja_log  Makefile  README.md  build.ninja  config.lua  gen_header.sh  init.lua  meson.build  pome_stdlib.lua  runtime.lua
include/: c_to_lua.h  editor.h  editor_datatype.h  error.h  gap_buffer.h  lua_vm.h  render.h
include.bak/: c_to_lua.h  editor.h  editor_datatype.h  error.h  file_handling.h  gap_buffer.h  lua_vm.h
src/: c_to_lua.c  editor.c  file_handling.c  gab_buffer.c  gap_buffer.c  lua_vm.c  main.c  render.c
tools/: gen_header.py
